Fix banner button width on Firefox

--- a/_sass/layout/_banner.scss
+++ b/_sass/layout/_banner.scss
@@ -197,7 +197,7 @@
 			border-radius: 5px;
 			padding: 0px 1.75em;
 			text-decoration: none;
-			width: 100%;
+			width: fit-content;
 			min-width: fit-content;
 			&:hover {
 				background-color: var(--color-fg);
